--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -194,11 +194,11 @@
                   </button>
                 </div>
               </div>
-              <div class="row" data-bind="visible: isLifting">
-                <div class="col"></div>
-                <div class="col"><input type="text" class="form-control form-control-sm" name="sets" placeholder="sets" data-bind="value: sets" /></div>
-                <div class="col"><input type="text" class="form-control form-control-sm" name="reps" placeholder="reps" data-bind="value: reps" /></div>
-                <div class="col"><input type="text" class="form-control form-control-sm" name="weight" placeholder="weight" data-bind="value: weight" /></div>
+              <div class="row g-1 mb-1" data-bind="visible: isLifting">
+                <div class="col-3"></div>
+                <div class="col-2"><input type="text" class="form-control form-control-sm" name="sets" placeholder="sets" data-bind="value: sets" /></div>
+                <div class="col-2"><input type="text" class="form-control form-control-sm" name="reps" placeholder="reps" data-bind="value: reps" /></div>
+                <div class="col-2"><input type="text" class="form-control form-control-sm" name="weight" placeholder="weight" data-bind="value: weight" /></div>
               </div>
             </div><!-- close workouts -->
             <textarea class="form-control" name="notes" placeholder="How was today?" data-bind="value: notes" rows="3"></textarea>
