--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -27,6 +27,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"
           integrity="sha512-+IpCthlNahOuERYUSnKFjzjdKXIbJ/7Dd6xvUp+7bEw0Jp2dg6tluyxLs+zq9BMzZgrLv8886T4cBSqnKiVgUw=="
           crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+  <script src="/static/kilo/js/components.js"></script>
   <script src="/static/kilo/js/kilo.js"></script>
 {% endblock js %}
 
@@ -80,17 +83,7 @@
         {{ message }}
       </div>
     {% endfor %}
-    <div data-bind="visible: loading">
-      <div class="spinner-grow text-secondary m-3" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-grow text-secondary m-3" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-grow text-secondary m-3" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
+    <div id="loading" data-bind="visible: loading"></div>
     <div class="row" data-bind="foreach: stats">
       <div class="col">
         <div class="card text-center">
