--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -9,7 +9,7 @@
         rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
         crossorigin="anonymous">
   </link>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css"
+  <link rel="stylesheet" href="{% static "c3/c3.min.css" %}"
         integrity="sha512-cznfNokevSG7QPA5dZepud8taylLdvgr0lDqw/FEZIhluFsSwyvS81CMnRdrNSKwbsmc43LtRd2/WMQV+Z85AQ=="
         crossorigin="anonymous">
   </link>
@@ -19,14 +19,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
           crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"
-          integrity="sha512-FHsFVKQ/T1KWJDGSbrUhTJyS1ph3eRrxI228ND0EGaEp6v4a/vGwPWd3Dtd/+9cI7ccofZvl/wulICEurHN1pg=="
-          crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"
-          integrity="sha512-+IpCthlNahOuERYUSnKFjzjdKXIbJ/7Dd6xvUp+7bEw0Jp2dg6tluyxLs+zq9BMzZgrLv8886T4cBSqnKiVgUw=="
-          crossorigin="anonymous"></script>
-  <script src="{% static "react/umd/react.production.min.js" %}" crossorigin></script>
-  <script src="{% static "react-dom/umd/react-dom.production.min.js" %}" crossorigin></script>
+  <script src="{% static "d3/dist/d3.min.js" %}"></script>
+  <script src="{% static "c3/c3.min.js" %}"></script>
+  <script src="{% static "react/umd/react.production.min.js" %}"></script>
+  <script src="{% static "react-dom/umd/react-dom.production.min.js" %}"></script>
   <script type="module" src="{% static "kilo/js/babel-prod/app.js" %}"></script>
 {% endblock js %}
 
