--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -16,6 +16,7 @@
 {% endblock style %}
 
 {% block js %}{{ block.super }}
+  <!-- TODO: reconcile bootstrap across kilo and rhyme -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
           crossorigin="anonymous"></script>
